chore: update `一个人的童话.md`

--- a/src/content/lyrics/一个人的童话.md
+++ b/src/content/lyrics/一个人的童话.md
@@ -5,7 +5,7 @@ composer: 杨千嬅
 ---
 
 [00:00.000]
-[00:27]神像跌踤了 仍然是碎石吧
+[00:27]神像跌踤了 仍然是碎石吧。
 [00:31]人鱼著陆后 大概得泡沫吧
 [00:34]那阵时 还没有恋爱过
 [00:38]才无知到真的信吧
